Bug 598643 - maxlength should not apply on all input types. r=smaug a=blocking-2.0